﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$

2006-12-05 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: Grant all privileges on wildcard name: we should
      really grant on username\_ instead of username_

2006-12-05 Michal Čihař  <michal@cihar.com>
    * server_privileges.php: Add IF NOT EXISTS to CREATE DATABASE query (RFE
      #1608372), reload navigation after creating database.
    * server_privileges.php: Use correct links (patch #1607236).

2006-12-04 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_structure.php, bug #1605985, missing HTML tag

2006-11-29 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/spanish update, thanks to Daniel Hinostroza
    * sql.php, libraries/display_tbl.lib.php: patch #1605032, checks for
     undefined index, thanks to Arpad Borsos

2006-11-26 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_structure.php: bug #1602335, browse distinct values
      and name containing a quote
    * libraries/bookmark.lib.php: bug #1579701: error listing bookmarks
      when dropping a table and no pmadb

2006-11-19 Michal Čihař  <michal@cihar.com>
    * libraries/unzip.lib.php: Fix check for encrypted file (bug #1596304).

2006-11-19 Marc Delisle  <lem9@users.sourceforge.net>
    * scripts/upgrade.pl: bug #1599173, adapt for new filename structure,
      thanks to Linas Gricius

2006-11-18 Michal Čihař  <michal@cihar.com>
    * Documentation.html, libraries/ip_allow_deny.lib.php: Define headers
      which to trust in configuration, thanks for help with this to Christian
      Schmidt, Peytz & Co.
    * libraries/common.lib.php: Fix XSS on database comment, thanks to laurent
      gaffié.

2006-11-18 Marc Delisle  <lem9@users.sourceforge.net>
    * index.php, libraries/common.lib.php: undefined index

2006-11-17 Michal Čihař  <michal@cihar.com>
    * sql.php, libraries/display_tbl.lib.php: Force pos to be integer to avoid
      XSS.