@@ -171,6 +171,9 @@ function PMA_importRunQuery($sql = '', $full = '')
                         $sql_query_disabled = TRUE;
                     }
                 }
+                if (! empty($sql_query)) {
+                    $sql_query = htmlspecialchars($sql_query);
+                }
             }
         } // end do query (no skip)
     } // end buffer exists
